; ModuleID = '/home/carl/AnghaBench/lab/q3map2/common/extr_polylib.c_ChopWinding.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/common/extr_polylib.c_ChopWinding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ON_EPSILON = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ChopWinding(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @ON_EPSILON, align 4
  %13 = call i32 @ClipWindingEpsilon(i32* %9, i32 %10, i32 %11, i32 %12, i32** %7, i32** %8)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @FreeWinding(i32* %14)
  %16 = load i32*, i32** %8, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @FreeWinding(i32* %19)
  br label %21

21:                                               ; preds = %18, %3
  %22 = load i32*, i32** %7, align 8
  ret i32* %22
}

declare dso_local i32 @ClipWindingEpsilon(i32*, i32, i32, i32, i32**, i32**) #1

declare dso_local i32 @FreeWinding(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
